test/Fail/Issue3451.err
Issue3451.agda:5.1-30: error: [NeedOptionSizedTypes]
Option --sized-types needed to declare size BUILTIN SIZE
when checking the pragma BUILTIN SIZE Size
